src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImDrawListSharedData_t ImDrawListSharedData;          
typedef struct ImGuiPayload_t ImGuiPayload;                                    
typedef struct ImGuiStorage_t ImGuiStorage;                                    
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiKey;             
typedef int ImGuiCol;             
typedef int ImGuiMouseButton;     
typedef int ImGuiHoveredFlags;      
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API const ImGuiPayload* ImGui_GetDragDropPayload(void);                                                     
CIMGUI_API void ImGui_BeginDisabled(bool disabled );
CIMGUI_API void ImGui_EndDisabled(void);
CIMGUI_API void ImGui_PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);
CIMGUI_API void ImGui_PopClipRect(void);
CIMGUI_API void ImGui_SetItemDefaultFocus(void);                   
CIMGUI_API void ImGui_SetKeyboardFocusHere(int offset );  
CIMGUI_API void ImGui_SetNavCursorVisible(bool visible);  
CIMGUI_API void ImGui_SetNextItemAllowOverlap(void);  
CIMGUI_API bool    ImGui_IsItemHovered(ImGuiHoveredFlags flags );        
CIMGUI_API bool    ImGui_IsItemActive(void);                                      
CIMGUI_API bool    ImGui_IsItemFocused(void);                                     
CIMGUI_API bool    ImGui_IsItemClicked(ImGuiMouseButton mouse_button );  
CIMGUI_API bool    ImGui_IsItemVisible(void);                                     
CIMGUI_API bool    ImGui_IsItemEdited(void);                                      
CIMGUI_API bool    ImGui_IsItemActivated(void);                                   
CIMGUI_API bool    ImGui_IsItemDeactivated(void);                                 
CIMGUI_API bool    ImGui_IsItemDeactivatedAfterEdit(void);                        
CIMGUI_API bool    ImGui_IsItemToggledOpen(void);                                 
CIMGUI_API bool    ImGui_IsAnyItemHovered(void);                                  
CIMGUI_API bool    ImGui_IsAnyItemActive(void);                                   
CIMGUI_API bool    ImGui_IsAnyItemFocused(void);                                  
CIMGUI_API ImGuiID ImGui_GetItemID(void);                                         
CIMGUI_API ImVec2  ImGui_GetItemRectMin(void);                                    
CIMGUI_API ImVec2  ImGui_GetItemRectMax(void);                                    
CIMGUI_API ImVec2  ImGui_GetItemRectSize(void);                                   
CIMGUI_API ImGuiViewport* ImGui_GetMainViewport(void);  
CIMGUI_API ImDrawList* ImGui_GetBackgroundDrawList(void);  
CIMGUI_API ImDrawList* ImGui_GetForegroundDrawList(void);  
CIMGUI_API bool                  ImGui_IsRectVisibleBySize(ImVec2 size);                 
CIMGUI_API bool                  ImGui_IsRectVisible(ImVec2 rect_min, ImVec2 rect_max);  
CIMGUI_API double                ImGui_GetTime(void);                                    
CIMGUI_API int                   ImGui_GetFrameCount(void);                              
CIMGUI_API ImDrawListSharedData* ImGui_GetDrawListSharedData(void);                      
CIMGUI_API const char*           ImGui_GetStyleColorName(ImGuiCol idx);                  
CIMGUI_API void                  ImGui_SetStateStorage(ImGuiStorage* storage);           
CIMGUI_API ImGuiStorage*         ImGui_GetStateStorage(void);
CIMGUI_API ImVec2 ImGui_CalcTextSize(const char* text, const char* text_end , bool hide_text_after_double_hash , float wrap_width );
CIMGUI_API ImVec4 ImGui_ColorConvertU32ToFloat4(ImU32 in);
CIMGUI_API ImU32  ImGui_ColorConvertFloat4ToU32(ImVec4 in);
CIMGUI_API void   ImGui_ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);
CIMGUI_API void   ImGui_ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);
CIMGUI_API bool        ImGui_IsKeyDown(ImGuiKey key);                                            
enum                                                   
{
    ImGuiKey_None                = 0,
    ImGuiKey_NamedKey_BEGIN      = 512,                    
    ImGuiKey_Tab                 = 512,                    
    ImGuiKey_LeftArrow,
    ImGuiKey_RightArrow,
    ImGuiKey_UpArrow,
    ImGuiKey_DownArrow,
    ImGuiKey_PageUp,
    ImGuiKey_PageDown,
    ImGuiKey_Home,
    ImGuiKey_End,
    ImGuiKey_Insert,
    ImGuiKey_Delete,
    ImGuiKey_Backspace,
    ImGuiKey_Space,
    ImGuiKey_Enter,
    ImGuiKey_Escape,
    ImGuiKey_LeftCtrl,
    ImGuiKey_LeftShift,
    ImGuiKey_LeftAlt,
    ImGuiKey_LeftSuper,                                    
    ImGuiKey_RightCtrl,
    ImGuiKey_RightShift,
    ImGuiKey_RightAlt,
    ImGuiKey_RightSuper,
    ImGuiKey_Menu,
    ImGuiKey_0,
    ImGuiKey_1,
    ImGuiKey_2,
    ImGuiKey_3,
    ImGuiKey_4,
    ImGuiKey_5,
    ImGuiKey_6,
    ImGuiKey_7,
    ImGuiKey_8,
    ImGuiKey_9,
    ImGuiKey_A,
    ImGuiKey_B,
    ImGuiKey_C,
    ImGuiKey_D,
    ImGuiKey_E,
    ImGuiKey_F,
    ImGuiKey_G,
    ImGuiKey_H,
    ImGuiKey_I,
    ImGuiKey_J,
    ImGuiKey_K,
    ImGuiKey_L,
    ImGuiKey_M,
    ImGuiKey_N,
    ImGuiKey_O,
    ImGuiKey_P,
    ImGuiKey_Q,
    ImGuiKey_R,
    ImGuiKey_S,
    ImGuiKey_T,
    ImGuiKey_U,
    ImGuiKey_V,
    ImGuiKey_W,
    ImGuiKey_X,
    ImGuiKey_Y,
    ImGuiKey_Z,
    ImGuiKey_F1,
    ImGuiKey_F2,
    ImGuiKey_F3,
    ImGuiKey_F4,
    ImGuiKey_F5,
    ImGuiKey_F6,
    ImGuiKey_F7,
    ImGuiKey_F8,
    ImGuiKey_F9,
    ImGuiKey_F10,
    ImGuiKey_F11,
    ImGuiKey_F12,
    ImGuiKey_F13,
    ImGuiKey_F14,
    ImGuiKey_F15,
    ImGuiKey_F16,
    ImGuiKey_F17,
    ImGuiKey_F18,
    ImGuiKey_F19,
    ImGuiKey_F20,
    ImGuiKey_F21,
    ImGuiKey_F22,
    ImGuiKey_F23,
    ImGuiKey_F24,
    ImGuiKey_Apostrophe,                                   
    ImGuiKey_Comma,                                        
    ImGuiKey_Minus,                                        
    ImGuiKey_Period,                                       
    ImGuiKey_Slash,                                        
    ImGuiKey_Semicolon,                                    
    ImGuiKey_Equal,                                        
    ImGuiKey_LeftBracket,                                  
    ImGuiKey_Backslash,                                    
    ImGuiKey_RightBracket,                                 
    ImGuiKey_GraveAccent,                                  
    ImGuiKey_CapsLock,
    ImGuiKey_ScrollLock,
    ImGuiKey_NumLock,
    ImGuiKey_PrintScreen,
    ImGuiKey_Pause,
    ImGuiKey_Keypad0,
    ImGuiKey_Keypad1,
    ImGuiKey_Keypad2,
    ImGuiKey_Keypad3,
    ImGuiKey_Keypad4,
    ImGuiKey_Keypad5,
    ImGuiKey_Keypad6,
    ImGuiKey_Keypad7,
    ImGuiKey_Keypad8,
    ImGuiKey_Keypad9,
    ImGuiKey_KeypadDecimal,
    ImGuiKey_KeypadDivide,
    ImGuiKey_KeypadMultiply,
    ImGuiKey_KeypadSubtract,
    ImGuiKey_KeypadAdd,
    ImGuiKey_KeypadEnter,
    ImGuiKey_KeypadEqual,
    ImGuiKey_AppBack,                                      
    ImGuiKey_AppForward,
    ImGuiKey_Oem102,                                       
    ImGuiKey_GamepadStart,                                 
    ImGuiKey_GamepadBack,                                  
    ImGuiKey_GamepadFaceLeft,                              
    ImGuiKey_GamepadFaceRight,                             
    ImGuiKey_GamepadFaceUp,                                
    ImGuiKey_GamepadFaceDown,                              
    ImGuiKey_GamepadDpadLeft,                              
    ImGuiKey_GamepadDpadRight,                             
    ImGuiKey_GamepadDpadUp,                                
    ImGuiKey_GamepadDpadDown,                              
    ImGuiKey_GamepadL1,                                    
    ImGuiKey_GamepadR1,                                    
    ImGuiKey_GamepadL2,                                    
    ImGuiKey_GamepadR2,                                    
    ImGuiKey_GamepadL3,                                    
    ImGuiKey_GamepadR3,                                    
    ImGuiKey_GamepadLStickLeft,                            
    ImGuiKey_GamepadLStickRight,                           
    ImGuiKey_GamepadLStickUp,                              
    ImGuiKey_GamepadLStickDown,                            
    ImGuiKey_GamepadRStickLeft,                            
    ImGuiKey_GamepadRStickRight,                           
    ImGuiKey_GamepadRStickUp,                              
    ImGuiKey_GamepadRStickDown,                            
    ImGuiKey_MouseLeft,
    ImGuiKey_MouseRight,
    ImGuiKey_MouseMiddle,
    ImGuiKey_MouseX1,
    ImGuiKey_MouseX2,
    ImGuiKey_MouseWheelX,
    ImGuiKey_MouseWheelY,
    ImGuiKey_ReservedForModCtrl,
    ImGuiKey_ReservedForModShift,
    ImGuiKey_ReservedForModAlt,
    ImGuiKey_ReservedForModSuper,
    ImGuiKey_NamedKey_END,
    ImGuiKey_NamedKey_COUNT      = ImGuiKey_NamedKey_END-ImGuiKey_NamedKey_BEGIN,
    ImGuiMod_None                = 0,
    ImGuiMod_Ctrl                = 1<<12,                  
    ImGuiMod_Shift               = 1<<13,                  
    ImGuiMod_Alt                 = 1<<14,                  
    ImGuiMod_Super               = 1<<15,                  
    ImGuiMod_Mask_               = 0xF000,                 
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiKey_COUNT               = ImGuiKey_NamedKey_END,  
    ImGuiMod_Shortcut            = ImGuiMod_Ctrl,          
    ImGuiKey_ModCtrl             = ImGuiMod_Ctrl,
    ImGuiKey_ModShift            = ImGuiMod_Shift,
    ImGuiKey_ModAlt              = ImGuiMod_Alt,
    ImGuiKey_ModSuper            = ImGuiMod_Super,         
#endif 
};
struct ImGuiPayload_t
{
    void*   Data;            
    int     DataSize;        
    ImGuiID SourceId;        
    ImGuiID SourceParentId;  
    int     DataFrameCount;  
    char    DataType[32+1];  
    bool    Preview;         
    bool    Delivery;        
};
struct ImGuiStorage_t
{
    ImVector_ImGuiStoragePair Data;
};
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};
struct ImGuiViewport_t
{
    ImGuiID            ID;                 
    ImGuiViewportFlags Flags;              
    ImVec2             Pos;                
    ImVec2             Size;               
    ImVec2             FramebufferScale;   
    ImVec2             WorkPos;            
    ImVec2             WorkSize;           
    void*              PlatformHandle;     
    void*              PlatformHandleRaw;  
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );