src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// peek directly into the current payload from anywhere. returns NULL when drag and drop is finished or inactive. use ImGuiPayload::IsDataType() to test for the payload type.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImGuiPayload* ImGui_GetDragDropPayload();

    /// <summary>
    /// <para>Disabling [BETA API]</para>
    /// <para>- Disable all user interactions and dim items visuals (applying style.DisabledAlpha over current colors)</para>
    /// <para>- Those can be nested but it cannot be used to enable an already disabled section (a single BeginDisabled(true) in the stack is enough to keep everything disabled)</para>
    /// <para>- Tooltips windows by exception are opted out of disabling.</para>
    /// - BeginDisabled(false)/EndDisabled() essentially does nothing but is provided to facilitate use of boolean expressions (as a micro-optimization: if you have tens of thousands of BeginDisabled(false)/EndDisabled() pairs, you might want to reformulate your code to avoid making those calls)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_BeginDisabled(byte disabled);

    [DllImport("cimgui")]
    public static extern void ImGui_EndDisabled();

    /// <summary>
    /// <para>Clipping</para>
    /// - Mouse hovering is affected by ImGui::PushClipRect() calls, unlike direct calls to ImDrawList::PushClipRect() which are render only.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushClipRect(System.Numerics.Vector2 clip_rect_min, System.Numerics.Vector2 clip_rect_max, byte intersect_with_current_clip_rect);

    [DllImport("cimgui")]
    public static extern void ImGui_PopClipRect();

    /// <summary>
    /// <para>Focus, Activation</para>
    /// make last item the default focused item of a newly appearing window.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetItemDefaultFocus();

    /// <summary>
    /// focus keyboard on the next widget. Use positive 'offset' to access sub components of a multiple component widget. Use -1 to access previous widget.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetKeyboardFocusHere(int offset);

    /// <summary>
    /// <para>Keyboard/Gamepad Navigation</para>
    /// alter visibility of keyboard/gamepad cursor. by default: show when using an arrow key, hide when clicking with mouse.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNavCursorVisible(byte visible);

    /// <summary>
    /// <para>Overlapping mode</para>
    /// allow next item to be overlapped by a subsequent item. Useful with invisible buttons, selectable, treenode covering an area where subsequent items may need to be added. Note that both Selectable() and TreeNode() have dedicated flags doing this.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetNextItemAllowOverlap();

    /// <summary>
    /// <para>Item/Widgets Utilities and Query Functions</para>
    /// <para>- Most of the functions are referring to the previous Item that has been submitted.</para>
    /// <para>- See Demo Window under "Widgets-&gt;Querying Status" for an interactive visualization of most of those functions.</para>
    /// is the last item hovered? (and usable, aka not blocked by a popup, etc.). See ImGuiHoveredFlags for more options.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemHovered(ImGuiHoveredFlags flags);

    /// <summary>
    /// is the last item active? (e.g. button being held, text field being edited. This will continuously return true while holding mouse button on an item. Items that don't interact will always return false)
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemActive();

    /// <summary>
    /// is the last item focused for keyboard/gamepad navigation?
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemFocused();

    /// <summary>
    /// is the last item hovered and mouse clicked on? (**)  == IsMouseClicked(mouse_button) &amp;&amp; IsItemHovered()Important. (**) this is NOT equivalent to the behavior of e.g. Button(). Read comments in function definition.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemClicked(ImGuiMouseButton mouse_button);

    /// <summary>
    /// is the last item visible? (items may be out of sight because of clipping/scrolling)
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemVisible();

    /// <summary>
    /// did the last item modify its underlying value this frame? or was pressed? This is generally the same as the "bool" return value of many widgets.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemEdited();

    /// <summary>
    /// was the last item just made active (item was previously inactive).
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemActivated();

    /// <summary>
    /// was the last item just made inactive (item was previously active). Useful for Undo/Redo patterns with widgets that require continuous editing.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemDeactivated();

    /// <summary>
    /// was the last item just made inactive and made a value change when it was active? (e.g. Slider/Drag moved). Useful for Undo/Redo patterns with widgets that require continuous editing. Note that you may get false positives (some widgets such as Combo()/ListBox()/Selectable() will return true even when clicking an already selected item).
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemDeactivatedAfterEdit();

    /// <summary>
    /// was the last item open state toggled? set by TreeNode().
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsItemToggledOpen();

    /// <summary>
    /// is any item hovered?
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsAnyItemHovered();

    /// <summary>
    /// is any item active?
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsAnyItemActive();

    /// <summary>
    /// is any item focused?
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsAnyItemFocused();

    /// <summary>
    /// get ID of last item (~~ often same ImGui::GetID(label) beforehand)
    /// </summary>
    [DllImport("cimgui")]
    public static extern uint ImGui_GetItemID();

    /// <summary>
    /// get upper-left bounding rectangle of the last item (screen space)
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetItemRectMin();

    /// <summary>
    /// get lower-right bounding rectangle of the last item (screen space)
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetItemRectMax();

    /// <summary>
    /// get size of last item
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_GetItemRectSize();

    /// <summary>
    /// <para>Viewports</para>
    /// <para>- Currently represents the Platform Window created by the application which is hosting our Dear ImGui windows.</para>
    /// <para>- In 'docking' branch with multi-viewport enabled, we extend this concept to have multiple active viewports.</para>
    /// <para>- In the future we will extend this concept further to also represent Platform Monitor and support a "no main platform window" operation mode.</para>
    /// return primary/default viewport. This can never be NULL.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImGuiViewport* ImGui_GetMainViewport();

    /// <summary>
    /// <para>Background/Foreground Draw Lists</para>
    /// this draw list will be the first rendered one. Useful to quickly draw shapes/text behind dear imgui contents.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImDrawList* ImGui_GetBackgroundDrawList();

    /// <summary>
    /// this draw list will be the last rendered one. Useful to quickly draw shapes/text over dear imgui contents.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImDrawList* ImGui_GetForegroundDrawList();

    /// <summary>
    /// <para>Miscellaneous Utilities</para>
    /// test if rectangle (of given size, starting from cursor position) is visible / not clipped.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsRectVisibleBySize(System.Numerics.Vector2 size);

    /// <summary>
    /// test if rectangle (in screen space) is visible / not clipped. to perform coarse clipping on user's side.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsRectVisible(System.Numerics.Vector2 rect_min, System.Numerics.Vector2 rect_max);

    /// <summary>
    /// get global imgui time. incremented by io.DeltaTime every frame.
    /// </summary>
    [DllImport("cimgui")]
    public static extern double ImGui_GetTime();

    /// <summary>
    /// get global imgui frame count. incremented by 1 every frame.
    /// </summary>
    [DllImport("cimgui")]
    public static extern int ImGui_GetFrameCount();

    /// <summary>
    /// you may use this when creating your own ImDrawList instances.
    /// </summary>
    [DllImport("cimgui")]
    public static extern IntPtr ImGui_GetDrawListSharedData();

    /// <summary>
    /// get a string corresponding to the enum value (for display, saving, etc.).
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte* ImGui_GetStyleColorName(ImGuiCol idx);

    /// <summary>
    /// replace current window storage with our own (if you want to manipulate it yourself, typically clear subsection of it)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetStateStorage(ImGuiStorage* storage);

    [DllImport("cimgui")]
    public static extern ImGuiStorage* ImGui_GetStateStorage();

    /// <summary>
    /// Text Utilities
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector2 ImGui_CalcTextSize(byte* text, byte* text_end, byte hide_text_after_double_hash, float wrap_width);

    /// <summary>
    /// Color Utilities
    /// </summary>
    [DllImport("cimgui")]
    public static extern System.Numerics.Vector4 ImGui_ColorConvertU32ToFloat4(uint input);

    [DllImport("cimgui")]
    public static extern uint ImGui_ColorConvertFloat4ToU32(System.Numerics.Vector4 input);

    [DllImport("cimgui")]
    public static extern void ImGui_ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);

    [DllImport("cimgui")]
    public static extern void ImGui_ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);

    /// <summary>
    /// <para>Inputs Utilities: Keyboard/Mouse/Gamepad</para>
    /// <para>- the ImGuiKey enum contains all possible keyboard, mouse and gamepad inputs (e.g. ImGuiKey_A, ImGuiKey_MouseLeft, ImGuiKey_GamepadDpadUp...).</para>
    /// <para>- (legacy: before v1.87, we used ImGuiKey to carry native/user indices as defined by each backends. This was obsoleted in 1.87 (2022-02) and completely removed in 1.91.5 (2024-11). See https://github.com/ocornut/imgui/issues/4921)</para>
    /// <para>- (legacy: any use of ImGuiKey will assert when key &lt; 512 to detect passing legacy native/user indices)</para>
    /// is key being held.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsKeyDown(ImGuiKey key);
